--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".PassageDetailActivity"/>
-        <activity android:name=".EditActivity"/>
+        <activity
+            android:name=".LoginActivity"/>
+        <activity
+            android:name=".MainActivity"/>
+        <activity
+            android:name=".PassageDetailActivity"/>
+        <activity
+            android:name=".EditActivity"/>
+        <activity
+            android:name=".ReviewActivity"
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
     </application>
 
 </manifest>
